hphp/hack/test/typecheck/references/refs_in_array/return_by_ref.php.exp
File "return_by_ref.php", line 4, characters 3-19:
Returning a reference to an element in an array is no longer supported in Hack. (Typing[4225])
